--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,7 +24,8 @@
     "sharp": "^0.34.2",
     "starlight-cooler-credit": "^0.4.0",
     "starlight-theme-bejamas": "workspace:*",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "tw-animate-css": "^1.3.8"
