feat(ui): add marquee, more work on the components and docs

--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -16,7 +16,8 @@
     "utils": "@bejamas/ui/lib/utils",
     "ui": "@bejamas/ui/components",
     "lib": "@bejamas/ui/lib",
-    "hooks": "@bejamas/ui/hooks"
+    "hooks": "@bejamas/ui/hooks",
+    "docs": "@/content/docs/components"
   },
   "registries": {}
 }
