--- a/packages/starlight-theme-bejamas/package.json
+++ b/packages/starlight-theme-bejamas/package.json
@@ -37,6 +37,7 @@
     "astro": ">=5.5.0"
   },
   "dependencies": {
+    "@expressive-code/plugin-line-numbers": "^0.41.3",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource/inter": "^5.2.8",
     "add": "^2.0.6",
