--- a/packages/bejamas/package.json
+++ b/packages/bejamas/package.json
@@ -26,6 +26,7 @@
     "cosmiconfig": "^9.0.0",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.2",
+    "prompts": "^2.4.2",
     "shadcn": "^3.3.1",
     "ts-morph": "^27.0.0",
     "tsconfig-paths": "^4.2.0",
