--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -53,4 +53,4 @@ jobs:
             fi
           done
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_CONFIG_TOKEN: ${{ secrets.NPM_TOKEN }}
