--- a/packages/bejamas/package.json
+++ b/packages/bejamas/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bejamas",
   "version": "0.1.0",
+  "license": "MIT",
   "type": "module",
   "bin": {
     "bejamas": "./dist/index.js"
@@ -18,6 +19,12 @@
     "prepublishOnly": "bun run build",
     "test": "bun run build && bun test"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bejamas/ui.git",
+    "directory": "packages/bejamas"
+  },
+  "bugs": "https://github.com/bejamas/ui/issues",
   "devDependencies": {
     "tsdown": "^0.15.2"
   },
