feat(docs): remove static components from the repo and autogenerate them before build

--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -25,3 +25,7 @@ pnpm-debug.log*
 
 # vercel
 .vercel
+
+# autogen component docs
+src/content/docs/components
+!src/content/docs/components/.gitkeep
