--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "bun run build:docs && astro dev",
     "start": "astro dev",
     "build": "bun run build:docs && astro build",
     "preview": "astro preview",
