--- a/packages/bejamas/package.json
+++ b/packages/bejamas/package.json
@@ -29,6 +29,7 @@
     "tsdown": "^0.15.2"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "commander": "^14.0.1",
     "cosmiconfig": "^9.0.0",
     "fast-glob": "^3.3.3",
