fix(web): generate registry block on build

--- a/apps/web/.gitignore
+++ b/apps/web/.gitignore
@@ -29,3 +29,7 @@ pnpm-debug.log*
 # autogen component docs
 src/content/docs/components
 !src/content/docs/components/.gitkeep
+
+# autogen registry blocks
+public/r
+!public/r/.gitkeep
