--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: oven-sh/setup-bun@v2
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: Set canary versions
         run: bun .github/version-release-canary.ts
