--- a/packages/bejamas/package.json
+++ b/packages/bejamas/package.json
@@ -29,11 +29,14 @@
     "tsdown": "^0.15.2"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "@antfu/ni": "^26.1.0",
     "commander": "^14.0.1",
     "cosmiconfig": "^9.0.0",
+    "dotenv": "^16.4.5",
+    "execa": "^9.6.0",
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.2",
+    "kleur": "^4.1.5",
     "prompts": "^2.4.2",
     "shadcn": "^3.3.1",
     "ts-morph": "^27.0.0",
