--- a/packages/bejamas/package.json
+++ b/packages/bejamas/package.json
@@ -37,6 +37,7 @@
     "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.2",
     "kleur": "^4.1.5",
+    "ora": "^9.0.0",
     "prompts": "^2.4.2",
     "shadcn": "^3.3.1",
     "ts-morph": "^27.0.0",
