fix(docs): add rewrite to match shadcn registry path

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -10,5 +10,11 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/r/styles/:style/:name.json",
+      "destination": "/r/:name.json"
+    }
   ]
 }
