--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,9 +2,6 @@
   "name": "@bejamas/ui",
   "version": "0.1.0",
   "private": true,
-  "exports": {
-    "./*": "./src/*"
-  },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
     "check-types": "tsc --noEmit"
@@ -20,5 +17,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.3.1"
+  },
+  "exports": {
+    "./globals.css": "./src/styles/globals.css",
+    "./lib/*": "./src/lib/*.ts",
+    "./components/*": "./src/components/*.astro"
   }
 }
