feat(docs): add examples

--- a/packages/bejamas/package.json
+++ b/packages/bejamas/package.json
@@ -9,6 +9,15 @@
   "files": [
     "dist/"
   ],
+  "keywords": [
+    "components",
+    "ui",
+    "tailwind",
+    "astro-ui",
+    "astro-shadcn",
+    "bejamas-ui",
+    "bejamas"
+  ],
   "engines": {
     "node": ">=20",
     "bun": ">=1.1.0"
