--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.4",
+    "@astrojs/netlify": "^6.5.13",
     "@astrojs/starlight": "^0.35.3",
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@astrojs/vercel": "^8.2.7",
