--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,7 +28,8 @@
     "starlight-cooler-credit": "^0.4.0",
     "starlight-theme-bejamas": "workspace:*",
     "tailwindcss": "^4.1.11",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "tw-animate-css": "^1.3.8"
