--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.13.8",
     "culori": "^4.0.2",
+    "shadcn": "^3.4.0",
     "sharp": "^0.34.2",
     "starlight-cooler-credit": "^0.4.0",
     "starlight-theme-bejamas": "workspace:*",
