--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@astrojs/vercel": "^8.2.7",
     "@bejamas/ui": "workspace:*",
+    "@lucide/astro": "^0.545.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.13.8",
     "culori": "^4.0.2",
