fix(docs): add missing @fontsource/inter dependency

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@astrojs/vercel": "^8.2.7",
     "@bejamas/ui": "workspace:*",
+    "@fontsource/inter": "^5.2.8",
     "@lucide/astro": "^0.545.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.13.8",
