--- a/packages/starlight-theme-bejamas/package.json
+++ b/packages/starlight-theme-bejamas/package.json
@@ -40,6 +40,7 @@
     "@expressive-code/plugin-line-numbers": "^0.41.3",
     "@fontsource-variable/inter": "^5.2.8",
     "@fontsource/inter": "^5.2.8",
+    "@lucide/astro": "^0.545.0",
     "add": "^2.0.6",
     "bun": "^1.2.22"
   }
