--- a/packages/starlight-theme-bejamas/package.json
+++ b/packages/starlight-theme-bejamas/package.json
@@ -42,6 +42,7 @@
     "@fontsource/inter": "^5.2.8",
     "@lucide/astro": "^0.545.0",
     "add": "^2.0.6",
-    "bun": "^1.2.22"
+    "bun": "^1.2.22",
+    "iconoir": "^7.11.0"
   }
 }
