--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
+    "tailwindcss-corner-shape": "^1.4.6",
     "tw-animate-css": "^1.4.0"
   },
   "exports": {
