fix(og-service): move postinstall to build

--- a/apps/og-service/package.json
+++ b/apps/og-service/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "vercel:dev": "vercel dev",
     "vercel:version": "vercel --version",
+    "build": "node scripts/postinstall.mjs",
     "postinstall": "node scripts/postinstall.mjs"
   },
   "dependencies": {
