--- a/apps/og-service/package.json
+++ b/apps/og-service/package.json
@@ -15,6 +15,7 @@
     "react": "^19.2.0"
   },
   "devDependencies": {
+    "@sparticuz/chromium": "^141.0.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.6",
     "@vercel/node": "^3.0.0",
