feat(og-service): add twitter variant

--- a/apps/og-service/vercel.json
+++ b/apps/og-service/vercel.json
@@ -1,4 +1,11 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "bunVersion": "1.x"
+  "bunVersion": "1.x",
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "https://ui.bejamas.com",
+      "permanent": true
+    }
+  ]
 }
