--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,14 +17,16 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/netlify": "^6.5.13",
+    "@astrojs/sitemap": "^3.6.0",
     "@astrojs/starlight": "^0.35.3",
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@astrojs/vercel": "^8.2.7",
     "@bejamas/ui": "workspace:*",
     "@fontsource/inter": "^5.2.8",
     "@lucide/astro": "^0.545.0",
-    "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.13.8",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.16.0",
+    "astro-robots-txt": "^1.0.0",
     "culori": "^4.0.2",
     "shadcn": "^3.4.0",
     "sharp": "^0.34.2",
