fix(starlight-theme): improve responsive design

--- a/packages/starlight-theme-bejamas/package.json
+++ b/packages/starlight-theme-bejamas/package.json
@@ -14,7 +14,9 @@
     "./overrides/SiteTitle.astro": "./src/overrides/SiteTitle.astro",
     "./overrides/Pagination.astro": "./src/overrides/Pagination.astro",
     "./overrides/PageTitle.astro": "./src/overrides/PageTitle.astro",
-    "./overrides/Hero.astro": "./src/overrides/Hero.astro"
+    "./overrides/Hero.astro": "./src/overrides/Hero.astro",
+    "./overrides/MobileTableOfContents.astro": "./src/overrides/MobileTableOfContents.astro",
+    "./overrides/Footer.astro": "./src/overrides/Footer.astro"
   },
   "scripts": {},
   "keywords": [
