--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "release": "changeset publish"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.7",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "turbo": "^2.5.5",
-    "typescript": "5.8.3"
+    "typescript": "^5.9.3"
   },
   "engines": {
     "node": ">=18"
