--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "@types/node": "^22.15.3",
     "eslint": "^9.31.0",
-    "typescript": "5.8.2"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
     "@lion/ui": "^0.14.2",
