--- a/templates/monorepo-astro/apps/web/package.json
+++ b/templates/monorepo-astro/apps/web/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "tw-animate-css": "^1.3.8"
+    "tw-animate-css": "^1.3.8",
+    "typescript": "^5.9.3"
   }
 }
