--- a/templates/astro/package.json
+++ b/templates/astro/package.json
@@ -9,15 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.13",
+    "@lucide/astro": "^0.556.0",
+    "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "tw-animate-css": "^1.3.8",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
