--- a/templates/monorepo-astro/apps/web/package.json
+++ b/templates/monorepo-astro/apps/web/package.json
@@ -9,17 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.13",
-    "astro": "^5.13.5",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.16.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.542.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "tw-animate-css": "^1.3.8",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
