--- a/templates/monorepo-astro-with-docs/apps/docs/package.json
+++ b/templates/monorepo-astro-with-docs/apps/docs/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "npm run build:docs && astro dev",
     "start": "npm run build:docs && astro dev",
     "build": "npm run build:docs && astro build",
     "build:docs": "npx bejamas@canary docs:build",
@@ -20,7 +20,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.6.1",
     "sharp": "^0.34.2",
-    "starlight-theme-bejamas": "file:../../../../packages/starlight-theme-bejamas",
+    "starlight-theme-bejamas": "^0.1.2",
     "tailwindcss": "^4.1.13"
   }
 }
