--- a/templates/monorepo-astro/apps/web/package.json
+++ b/templates/monorepo-astro/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@repo/ui": "workspace:*",
     "astro": "^5.16.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
