--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "shadcn": "^3.4.0",
     "sharp": "^0.34.2",
     "starlight-cooler-credit": "^0.4.0",
+    "starlight-page-actions": "^0.4.0",
     "starlight-theme-bejamas": "workspace:*",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
