--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@data-slot/accordion": "^0.2.4",
+    "@data-slot/collapsible": "^0.2.4",
     "@data-slot/dialog": "^0.2.4",
     "@data-slot/dropdown-menu": "^0.2.4",
     "@data-slot/tabs": "^0.2.4",
