feat(ui): add tooltip component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,11 +12,12 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@data-slot/accordion": "^0.2.4",
-    "@data-slot/collapsible": "^0.2.4",
-    "@data-slot/dialog": "^0.2.4",
+    "@data-slot/accordion": "^0.2.6",
+    "@data-slot/collapsible": "^0.2.6",
+    "@data-slot/dialog": "^0.2.6",
     "@data-slot/dropdown-menu": "^0.2.4",
-    "@data-slot/tabs": "^0.2.4",
+    "@data-slot/tabs": "^0.2.6",
+    "@data-slot/tooltip": "^0.2.6",
     "@lucide/astro": "^0.540.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
