--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "astro": "^5.16.4",
     "astro-robots-txt": "^1.0.0",
     "culori": "^4.0.2",
+    "expressive-code-collapsible": "^0.1.0",
     "shadcn": "^3.4.0",
     "sharp": "^0.34.2",
     "starlight-cooler-credit": "^0.4.0",
