--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "astro-robots-txt": "^1.0.0",
     "culori": "^4.0.2",
     "expressive-code-collapsible": "^0.1.0",
+    "prismjs": "^1.30.0",
     "shadcn": "^3.4.0",
     "sharp": "^0.34.2",
     "starlight-cooler-credit": "^0.4.0",
@@ -41,6 +42,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.5",
     "tw-animate-css": "^1.3.8"
   }
 }
