--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.12",
-    "@upstash/redis": "^1.34.3",
+    "@astrojs/alpinejs": "^0.4.9",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.3.4",
     "@astrojs/netlify": "^6.5.13",
@@ -27,12 +27,15 @@
     "@fontsource/inter": "^5.2.8",
     "@lucide/astro": "^0.545.0",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/alpinejs": "^3.13.11",
+    "@upstash/redis": "^1.34.3",
     "ai": "^6.0.42",
+    "alpinejs": "^3.15.4",
     "astro": "^5.16.4",
     "astro-robots-txt": "^1.0.0",
     "culori": "^4.0.2",
-    "nanoid": "^5.0.9",
     "expressive-code-collapsible": "^0.1.0",
+    "nanoid": "^5.0.9",
     "prismjs": "^1.30.0",
     "shadcn": "^3.4.0",
     "sharp": "^0.34.2",
