--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,8 @@
     "@data-slot/collapsible": "^0.2.6",
     "@data-slot/dialog": "^0.2.6",
     "@data-slot/dropdown-menu": "^0.2.4",
-    "@data-slot/tabs": "^0.2.6",
+    "@data-slot/navigation-menu": "^0.2.7",
+    "@data-slot/tabs": "^0.2.8",
     "@data-slot/tooltip": "^0.2.6",
     "@lucide/astro": "^0.540.0",
     "class-variance-authority": "^0.7.1",
