--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,6 +17,7 @@
     "@data-slot/dialog": "^0.2.6",
     "@data-slot/dropdown-menu": "^0.2.4",
     "@data-slot/navigation-menu": "^0.2.7",
+    "@data-slot/slider": "^0.2.10",
     "@data-slot/tabs": "^0.2.9",
     "@data-slot/tooltip": "^0.2.6",
     "@lucide/astro": "^0.540.0",
