feat: add toggle

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,6 +19,8 @@
     "@data-slot/navigation-menu": "^0.2.13",
     "@data-slot/slider": "^0.2.12",
     "@data-slot/tabs": "^0.2.13",
+    "@data-slot/toggle": "^0.2.13",
+    "@data-slot/toggle-group": "^0.2.13",
     "@data-slot/tooltip": "^0.2.12",
     "@lucide/astro": "^0.540.0",
     "class-variance-authority": "^0.7.1",
