--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,6 +16,7 @@
     "@data-slot/collapsible": "^0.2.6",
     "@data-slot/dialog": "^0.2.6",
     "@data-slot/dropdown-menu": "^0.2.4",
+    "@data-slot/navigation-menu": "^0.2.14",
     "@data-slot/tabs": "^0.2.6",
     "@data-slot/tooltip": "^0.2.6",
     "@lucide/astro": "^0.540.0",
