--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,9 +15,10 @@
     "@data-slot/accordion": "^0.2.13",
     "@data-slot/collapsible": "^0.2.13",
     "@data-slot/dialog": "^0.2.13",
-    "@data-slot/dropdown-menu": "^0.2.12",
-    "@data-slot/navigation-menu": "^0.2.14",
-    "@data-slot/slider": "^0.2.12",
+    "@data-slot/dropdown-menu": "^0.2.21",
+    "@data-slot/navigation-menu": "^0.2.21",
+    "@data-slot/select": "^0.2.22",
+    "@data-slot/slider": "^0.2.14",
     "@data-slot/tabs": "^0.2.14",
     "@data-slot/toggle": "^0.2.13",
     "@data-slot/toggle-group": "^0.2.13",
