fix: add missing dependency

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@astrojs/vercel": "^8.2.7",
     "@bejamas/ui": "workspace:*",
+    "@expressive-code/plugin-line-numbers": "^0.41.6",
     "@fontsource/inter": "^5.2.8",
     "@lucide/astro": "^0.545.0",
     "@tailwindcss/vite": "^4.1.17",
