--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,8 +16,9 @@
     "@data-slot/collapsible": "^0.2.25",
     "@data-slot/dialog": "^0.2.25",
     "@data-slot/dropdown-menu": "^0.2.25",
-    "@data-slot/navigation-menu": "^0.2.25",
-    "@data-slot/select": "^0.2.25",
+    "@data-slot/navigation-menu": "^0.2.29",
+    "@data-slot/popover": "^0.2.29",
+    "@data-slot/select": "^0.2.29",
     "@data-slot/slider": "^0.2.25",
     "@data-slot/tabs": "^0.2.14",
     "@data-slot/toggle": "^0.2.25",
