--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@data-slot/accordion": "^0.2.43",
     "@data-slot/collapsible": "^0.2.43",
+    "@data-slot/combobox": "^0.2.43",
     "@data-slot/dialog": "^0.2.43",
     "@data-slot/dropdown-menu": "^0.2.43",
     "@data-slot/navigation-menu": "^0.2.43",
