fix(templates): update components

--- a/templates/monorepo-astro-with-docs/packages/ui/package.json
+++ b/templates/monorepo-astro-with-docs/packages/ui/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@data-slot/select": "^0.2.80",
     "@lucide/astro": "^0.556.0",
     "astro": "^5.16.4",
     "class-variance-authority": "^0.7.1",
