--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,27 +8,28 @@
   },
   "devDependencies": {
     "@types/node": "^22.19.11",
-    "eslint": "^9.39.2",
+    "eslint": "^9.39.3",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@data-slot/accordion": "^0.2.80",
-    "@data-slot/collapsible": "^0.2.80",
-    "@data-slot/combobox": "^0.2.80",
-    "@data-slot/dialog": "^0.2.80",
-    "@data-slot/dropdown-menu": "^0.2.80",
-    "@data-slot/navigation-menu": "^0.2.80",
-    "@data-slot/popover": "^0.2.80",
-    "@data-slot/select": "^0.2.80",
-    "@data-slot/slider": "^0.2.80",
-    "@data-slot/tabs": "^0.2.80",
-    "@data-slot/toggle": "^0.2.80",
-    "@data-slot/toggle-group": "^0.2.80",
-    "@data-slot/tooltip": "^0.2.80",
+    "@data-slot/accordion": "^0.2.92",
+    "@data-slot/collapsible": "^0.2.92",
+    "@data-slot/combobox": "^0.2.92",
+    "@data-slot/dialog": "^0.2.92",
+    "@data-slot/dropdown-menu": "^0.2.92",
+    "@data-slot/hover-card": "^0.2.92",
+    "@data-slot/navigation-menu": "^0.2.92",
+    "@data-slot/popover": "^0.2.92",
+    "@data-slot/select": "^0.2.92",
+    "@data-slot/slider": "^0.2.92",
+    "@data-slot/tabs": "^0.2.92",
+    "@data-slot/toggle": "^0.2.92",
+    "@data-slot/toggle-group": "^0.2.92",
+    "@data-slot/tooltip": "^0.2.92",
     "@lucide/astro": "^0.540.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^3.4.1",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.2.0",
     "tw-animate-css": "^1.4.0"
   },
