--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,7 @@
     "alpinejs": "^3.15.4",
     "astro": "^5.16.4",
     "astro-robots-txt": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
     "culori": "^4.0.2",
     "expressive-code-collapsible": "^0.1.0",
     "nanoid": "^5.0.9",
